z-index fix

--- a/src/scss/_blockquote.scss
+++ b/src/scss/_blockquote.scss
@@ -23,7 +23,7 @@ blockquote {
         position: relative;
         
         &:before {
-            z-index: 11;
+            z-index: 4;
             content: '“';
             top: -1em;
             margin-left: 0;
